framec_tests/language_specific/cpp/v3_outline/negative/handler_outside_state.frm
@target cpp

system S {
    machine:
        e() {
            => $^
        }
}

